fix layout shift when image transitions from pending to uploaded

--- a/src/components/message-list/styles.module.scss
+++ b/src/components/message-list/styles.module.scss
@@ -60,25 +60,29 @@
       }
 
       .media-wrapper {
-        width: 100%;
-        height: 100%;
         max-width: 220px;
         max-height: 220px;
         margin-bottom: 6px;
       }
 
       .img-preview {
+        display: block;
         object-fit: contain;
         width: 100%;
         height: 100%;
+        max-width: 220px;
+        max-height: 220px;
         border-radius: 10px;
         cursor: pointer
       }
 
       .video-preview {
+        display: block;
         cursor: pointer;
         width: 100%;
         height: 100%;
+        max-width: 220px;
+        max-height: 220px;
         display: flex;
         align-items: center;
         justify-content: center;
